# transit-passenger-surveys

./: .gitignore  .pre-commit-config.yaml  404.html  README.html  README.md  SOP.md  _config.yml  alembic.ini  data.md  index.html  papers.md  pyproject.toml  reports.md  schedule.md  steering.md  to be deleted.md
QA_QC/: Identify Access Issues with Caltrain in Standardized Database.r  find_duplicates.py
_includes/: head.html
_layouts/: default.html
config/: pipeline.test.yaml  pipeline.yaml
css/: font-awesome.css  poole.css
decomposition/: Decomposition Analysis version 01.twbx  Decomposition Analysis.twb  DecompositionAnalysis_BP.r  DecompositionAnalysis_SI.r  Route Level Analysis version 00.twbx  Route Level Analysis.Rmd  Route Level Analysis.twb  operator_level_analysis.r  route_level_analysis.csv  route_level_specification.text  temp_canonical_route_crosswalk.csv  temp_canonical_route_names.csv
docs/: database_access.md
exploration/: Explore_2024_draft_BART_SAS.Rmd  Find_Nearest_BART_Station_to_Destination.R
ingestion/: 2024_BART_add_zones.py  __init__.py  backfill_database_from_legacy.py  export.py  export_hyper.py  rebuild_database.py
instrument/: README.md  access.md  data_dictionary.md  destination.md  dictionary.md  egress.md  fare.md  household.md  origin.md  person.md  school_half-tour.md  work_half-tour.md
instrument-and-dictionary/: README.html  README.md  data_dictionary.md  destination.md  egress.md  household.md  origin.md  person.md  work_half-tour.md
make-uniform/: 2024_BART.py  README.md
mode-choice-targets/: processOBSDataBase.R
multi-criteria-expansion/: README.md  build-production-example-inputs.Rmd  method-library.R  mini-example.Rmd  production-example.Rmd  small-example.Rmd
on-off-explore/: Tri Delta On Off Exploration.Rmd
requests/: 2024_BART.py  Append Raw Lat Long for Some Operators.r  BART Dublin Pleasanton Out of Region TAP to TAP Matrix.r  BART and Caltrain Home Counties.r  BART_and_ACE_Version_with_Census_Tract_and_TM1_TAZ_Geography.R  Big 7 by auto sufficiency.r  Caltrain Shuttle Access Egress.R  Code Person Type.R  Code Transit Passenger Discount by Person Type and Mode.R  Code Transit Passenger Discount by Person Type.R  Create TPS file with distances appended.R  Distances between transit milestone locations.r  Remove_LatLong.py  (+22 more)
(+551 files in other folders)
