[project]
name = "transit-passenger-surveys"
version = "0.1.0"
description = "This package ingests and processes transit passenger survey data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "fastexcel>=0.18.0",
    "geopandas>=1.1.2",
    "gitpython>=3.1.46",
    "polars>=1.37.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transit_passenger_tools"]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Trailing comma - conflicts with formatter
    "D213",    # Use D212 (summary on first line)
    "RET504",  # Allow return of assigned variable
    "FBT001",  # Boolean args OK in this codebase
    "FBT002",  # Boolean args OK in this codebase
    "ERA001",  # Ignore commented out code
]
lint.pydocstyle.convention = "google"
exclude = ["archive/**", "*.html", "uv.lock"]

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 5

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",      # assert is fine in tests
    "PLR0913",   # many arguments OK for test helpers
    "PLR2004",   # allow magic numbers in tests
    "ANN",       # type annotations optional in tests
    "SLF001",    # allow access to private members in tests
    "DTZ001",    # allow naive datetime in tests
]

"scripts/**/*.py" = [
    "INP001",      # script not part of package
]

"ingestion/**/*.py" = [
    "INP001",      # script not part of package
    "T201",        # allow print statements in scripts
]

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
    archive
  | \.git
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"

[tool.uv.sources]
travel-diary-survey-tools = { git = "https://github.com/BayAreaMetro/travel-diary-survey-tools.git" }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
